src/main/resources/public/nttsite.css
html, body {
    height: 100%;
    font-family: 'Catamaran';
}

.spacing {
    padding-left: 12%;
    padding-right: 12%;
}

.links {
    width: 100px;
    color: #FFFFFF !important;
}

.blue {
    background-color: #5876AA !important;
    min-height: 210px;
}

.main-heading {
    color: #FFFFFF !important;
    padding-left: 40px;
    padding-top: 20px;
    padding-bottom: 20px;
    font-size: 35px;
}

.head {
    padding-left: 40px;
    margin-right: 25px;
}

.sub-heading {
    padding-top: 35px;
    letter-spacing: 1.4px;
    text-transform: uppercase;
    font-size: 20px;
    font-weight: bold;
}

.text {
    padding-top: 15px;
    max-width: 90%;
}

.content {
    padding-top: 15px;
}

.left-content {
    width: 45%;
    float: left;
}

.right-content {
    width: 45%;
    float: left;
}

.small-font {
    font-size: 14px;
}

input {
    border: 0;
    outline: 0;
    background: transparent;
    border-bottom: 1px solid black;
    width: 90%;
}

.sides {
    clear: both;
}

.left-button {
    cursor: pointer;
    width: 80%;
    background: #000B28 0% 0% no-repeat padding-box;
}

.button-text {
    font-size: 10px;
    letter-spacing: 0.01px;
    color: #FFFFFF;
    text-transform: uppercase;
}

.right-button {
    cursor: pointer;
    width: 13%;
    background: #000B28 0% 0% no-repeat padding-box;
}

.textarea {
    margin-top: 20px;
    width: 94%;
    font-size: 10px;
}

.success-copy {
    padding-top: 15px;
    font-size: 14px;
}

.rectangle{
    background: #F3F3F3 0% 0% no-repeat padding-box;
    border-radius: 3px;
}

/*
Extra small (xs) devices (portrait phones, less than 576px)
No media query since this is the default in Bootstrap

Small (sm) devices (landscape phones, 576px and up)
@media (min-width: 576px) { ... }

Medium (md) devices (tablets, 768px and up)
@media (min-width: 768px) { ... }

Large (lg) devices (desktops, 992px and up)
@media (min-width: 992px) { ... }

Extra (xl) large devices (large desktops, 1200px and up)
@media (min-width: 1200px) { ... }
*/

/*---Media Queries --*/
@media (max-width: 992px) {

}
@media (max-width: 768px) {

}
@media (max-width: 576px) {

}

